--- a/src/compoments/Homepage.css
+++ b/src/compoments/Homepage.css
@@ -1,86 +1,101 @@
 .action{
     width: 10% !important;
     text-align: center  
+    }
+.input:hover{
+    background-color:none;
+    }
+.image{
+    width: 10%;
+    text-align: center
+    }
+.name{
+    width: 20%;
+    text-align: center;
+    margin:center;  
+    }
+.name:hover{
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.54) !important;
+    }
+#select:hover{
+    cursor: pointer;    
 }
-.input:hover{background-color:none;}
-.image{width: 10%;
-    text-align: center}
-.name{width: 20%;
-    text-align: center  }
-.code{width: 13%;
-    text-align: center}
-.desciption{width: 13%;
-    text-align: center}
-.price{width: 13%;
-    text-align: center}
-.rrp{width: 13%;
-    text-align: center}
-.up{width: 14%;
-    text-align: center}
+.name:hover > i {
+    color: rgba(0, 0, 0, 0.54) !important;
+    }
+.code{
+    width: 13%;
+    text-align: center
+    }
+.desciption{
+    width: 13%;
+    text-align: center
+    }
+.rrp{
+    width: 13%;
+    text-align: center;
+    cursor: pointer;
+    }
+.rrp:hover{
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.54) !important;
+}
+.rrp:hover > i {
+    color: rgba(0, 0, 0, 0.54) !important;
+    }
+.up{
+    width: 14%;
+    text-align: center
+    }
 .searchbar{
-   
     display: flex;
     align-items: center;
     padding-left :24px;
-    padding-right: 8px;
-    
-}
+    padding-right: 8px;   
+    }
 .button{
     text-align: center;
-}
+    }
 .searchInputs{
-    /* right: 0px; */
-    /* position: absolute; */
-    /* text-decoration: underline 20px; */
-    /* border-bottom: #787878 2px solid; */
     display: inline-flex;
     align-items: center;
-    /* border-bottom: 2px solid #3f51b5; */
-}
+    }
 .searchPart{
-     /* border-bottom: 2px solid #3f51b5; */
      float: left;
      display: inline-flex;
-     /* border-bottom: 2px solid #3f51b5; */
-}
-
+    }
 .iconn{
-    /* display: flex; */
-        right: 50px;
-        top: 75px;
-        position: absolute;
-        align-items: center}
+    right: 50px;
+    top: 75px;
+    position: absolute;
+    align-items: center
+    }
 table{
     width: 100%;
-  }
+    }
 th {
-height: 50px;
-
-}
+    height: 50px;
+    }
 tr,td,th {
-padding: 8px;
-/* padding-right: 80px; */
-text-align: center;
-border-bottom: 1px solid #ddd  !important;
+    padding: 8px;
+    text-align: center;
+    border-bottom: 1px solid #ddd  !important;
+    }
 
-}
-/* tr:hover {background-color:#f5f5f5;}
-li:hover {background-color:#f5f5f5;} */
 .btn{
     border-radius: 50%;
-}
+    }
 .btn:hover{background-color:rgba(0, 0, 0, 0.08);}
-/* td::after{background-color:rgba(0, 0, 0, 0.08);} */
 input{
     border: none;
     padding: 6px 0 1px;
     width: 100%;
-    /* background-color:#f5f5f5; */
     border-bottom: 2px solid ;
     outline: none;
-}
+    }
 .img{
     height: 60px;
     width: 60px;
-}
+    }
 
