--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,17 +1,19 @@
 .action{
     width: 10% !important;
-    text-align: center  
+    text-align: left;
+    padding-left :15px;
     }
 .input:hover{
     background-color:none;
     }
 .image{
     width: 10%;
-    text-align: center
+    text-align: left;
+    padding-left :15px;
     }
 .name{
     width: 20%;
-    text-align: center;
+    text-align: left;
     margin:center;  
     }
 .name:hover{
@@ -27,15 +29,15 @@
     }
 .code{
     width: 13%;
-    text-align: center
+    text-align: left
     }
 .desciption{
     width: 13%;
-    text-align: center
+    text-align: left
     }
 .rrp{
     width: 13%;
-    text-align: center;
+    text-align: left;
     cursor: pointer;
     }
 .rrp:hover{
@@ -52,11 +54,11 @@
 .searchbar{
     display: flex;
     align-items: center;
-    padding-left :24px;
+    /* padding-left :24px; */
     padding-right: 8px;   
     }
 .button{
-    text-align: center;
+    text-align: left;
     }
 .searchInputs{
     display: inline-flex;
@@ -80,7 +82,7 @@ th {
     }
 tr,td,th {
     padding: 8px;
-    text-align: center;
+    text-align: left;
     border-bottom: 1px solid #ddd  !important;
     
     }
